--- a/src/app/pages/dashboard/subjects/subjects.html
+++ b/src/app/pages/dashboard/subjects/subjects.html
@@ -25,7 +25,7 @@
       <div class="flex flex-row w-full justify-between my-4">
         <div class="flex flex-row items-center">
           <img src="images/subject-icon.svg" alt="" class="w-4 mx-4">
-          <span>My Subjects</span>
+          <span class="font-medium text-prussian-blue-900">My Subjects</span>
         </div>
         <button 
           class="w-max rounded-md px-5 py-3 text-white bg-prussian-blue-800 hover:bg-prussian-blue-500 disabled:bg-prussian-blue-500 flex flex-row text-xs" 
@@ -42,17 +42,19 @@
         @for (subject of subjects; track subject.id) {
           <!-- Subjects Item -->
           <button 
-            class="flex flex-col w-56 h-28 p-4 bg-prussian-blue-150 hover:bg-prussian-blue-200 rounded-md justify-between m-4 relative hover:top-2"
+            class="relative flex flex-col justify-between overflow-hidden rounded-lg w-56 h-28 p-4 m-6 bg-prussian-blue-150 hover:bg-prussian-blue-200 hover:top-2"
             (click)="navigateSubject(subject)"
           >
             <div class="flex flex-row justify-between items-center">
-              <span>{{subject.name}}</span>
-              <span class="text-xs">{{subject.status}}</span>
+              <span class="font-medium text-prussian-blue-900">{{subject.name}}</span>
+              <span [class]="`text-xs py-1 px-3 rounded-full ${getStatusColours(subject.status)}`">
+                {{(subject.status.toLowerCase() != "in progress" && subject.status.toLocaleLowerCase() != "completed") ? "Setup Incomplete" : subject.status}}
+              </span>
             </div>
             <div class="flex flex-row w-full items-center">
               <!-- Progress Bar -->
               <div class="w-full">
-                <div class="w-3/4 h-2 bg-gray-300 rounded-full">
+                <div class="w-11/12 h-1 bg-gray-300 rounded-full">
                   <div class="h-full bg-prussian-blue-800 rounded-full" [ngStyle]="{ width: subject.completion*100 + '%' }"></div>
                 </div>
               </div>
