--- a/src/app/pages/auth/login/login.html
+++ b/src/app/pages/auth/login/login.html
@@ -1,6 +1,6 @@
 <div class="flex flex-row w-screen h-screen justify-between">
   <!-- left panel -->
-  <div class="w-6/12 h-full flex flex-col p-12">
+  <div class="w-full lg-w-6/12 h-full flex flex-col p-12">
     <div class="flex flex-row my-8 items-center">
       <img src="images/logo-coloured.svg" alt="Maestro Logo" class="w-12 mr-2">
       <span class="font-serif text-3xl h-max text-prussian-blue-900">Maestro</span>
@@ -68,7 +68,7 @@
     </div>
   </div>
   <!-- right panel -->
-  <div class="w-6/12 h-full relative">
+  <div class="w-full h-full relative hidden lg:block">
     <img src="images/person-studying-1.png" alt="Maestro Logo" class="h-full w-full object-cover">
     <div class="flex flex-row m-8 items-center absolute left-0 bottom-0">
       <img src="images/logo-white.svg" alt="Maestro Logo" class="w-12 mr-2">
