--- a/src/app/pages/subject-create/naming-upload/naming-upload.html
+++ b/src/app/pages/subject-create/naming-upload/naming-upload.html
@@ -90,7 +90,7 @@
     }
 
     <div class="flex flex-row items-center">
-      <button 
+      <button d
         type="submit" 
         class="w-max bg-prussian-blue-800 hover:bg-prussian-blue-500 disabled:bg-prussian-blue-500 text-white flex flex-row items-center px-5 py-3 rounded-md text-sm" 
         (click)="onSubmit()"
