added responsiveness for subject creation and some touchups to other pages

--- a/src/app/pages/auth/signup/signup.html
+++ b/src/app/pages/auth/signup/signup.html
@@ -108,7 +108,7 @@
         Next
       </button>
     </form>
-    <div class="self-center m-4">
+    <div class="self-center m-4 pb-4">
       Have a Maestro account? <a href="/login" class="font-medium text-prussian-blue-900 hover:text-prussian-blue-500">Log In</a>
     </div>
   </div>
