--- a/src/app/shared/components/header/header.html
+++ b/src/app/shared/components/header/header.html
@@ -1,4 +1,4 @@
-<header class="flex flex-col md:flex-row justify-between items-center m-4 md:m-8 space-y-4 md:space-y-0">
+<header class="flex flex-row justify-between items-center m-4 md:m-8 space-y-4 md:space-y-0">
   <!-- Left: logo + title (styling follows first block) -->
   <a routerLink="/" class="flex flex-row items-center no-underline mx-4 md:mx-8">
     <img src="images/logo-coloured.svg" alt="Maestro Logo" class="w-8 md:w-12 mr-2">
