--- a/src/app/pages/auth/login/login.html
+++ b/src/app/pages/auth/login/login.html
@@ -63,7 +63,7 @@
         Next
       </button>
     </form>
-    <div class="self-center m-4">
+    <div class="self-center m-4 pb-4">
       New to Maestro? <a href="/signup" class="font-medium text-prussian-blue-900 hover:text-prussian-blue-500">Sign Up!</a>
     </div>
   </div>
