--- a/src/app/pages/home/pricing/pricing.html
+++ b/src/app/pages/home/pricing/pricing.html
@@ -12,7 +12,7 @@
   <!-- Pricing Tiers -->
   <div class="mx-auto mt-12 sm:mt-16 flex w-full flex-col justify-center space-y-12 md:flex-row md:items-start md:space-x-8 md:space-y-0 lg:max-w-screen-lg px-4">
     <!-- Basic Tier -->
-    <div class="self-end flex h-full flex-1 flex-col items-start rounded-[32px] border border-[#BFBFBF] bg-white p-6 sm:p-8 text-center shadow-lg md:mt-24">
+    <div class="self-center md:self-end flex h-full md:flex-1 w-5/6 flex-col items-start rounded-[32px] border border-[#BFBFBF] bg-white p-6 sm:p-8 text-center shadow-lg md:mt-24">
       <h3 class="text-xl sm:text-2xl font-semibold text-[#264653]">Basic</h3>
       <div class="mt-2 text-3xl sm:text-4xl font-bold text-[#264653]">
         <span>₦</span>0<span class="text-xs sm:text-sm font-normal text-gray-500">/per month</span>
@@ -44,7 +44,7 @@
     </div>
 
     <!-- Standard Tier -->
-    <div class="self-center relative flex h-full flex-1 flex-col items-start rounded-[34px] border border-[#BFBFBF] bg-[#262626] p-6 sm:p-[34px] px-4 sm:px-[26px] text-center text-white shadow-xl">
+    <div class="self-center relative flex h-full md:flex-1 w-5/6 flex-col items-start rounded-[34px] border border-[#BFBFBF] bg-[#262626] p-6 sm:p-8 text-center text-white shadow-xl">
       <div class="popular-tag">
         <p class="font-sans font-medium text-sm sm:text-base tracking-wider text-[#C79107]">★ Most Popular</p>
       </div>
@@ -79,7 +79,7 @@
     </div>
 
     <!-- Premium Tier -->
-    <div class="self-start flex h-full flex-1 flex-col items-start rounded-[36px] border border-[#BFBFBF] bg-white p-6 sm:p-9 px-4 sm:px-7 text-center shadow-lg md:mt-24">
+    <div class="self-center md:self-start flex h-full md:flex-1 w-5/6 flex-col items-start rounded-[36px] border border-[#BFBFBF] bg-white p-6 sm:p-8 text-center shadow-lg md:mt-24">
       <h3 class="text-xl sm:text-2xl font-semibold text-[#264653]">Premium</h3>
       <div class="mt-2 text-3xl sm:text-4xl font-bold text-[#264653]">
         <span>₦</span>15,000<span class="text-xs sm:text-sm font-normal text-gray-500">/per month</span>
