--- a/src/app/pages/subject-create/naming-upload/naming-upload.html
+++ b/src/app/pages/subject-create/naming-upload/naming-upload.html
@@ -1,27 +1,27 @@
 <app-header></app-header>
-<div class="flex flex-col w-full px-32">
-  <div class="flex flex-row mb-8">
+<div class="flex flex-col w-full px-12 md:px-32">
+  <div class="flex flex-row mb-8 w-full">
     <app-creation-step-tab
       [text]="'My Subject and Materials'"
       [icon]="'images/subject-icon.svg'"
       [active]="true"
-      class="w-2/6"
+      class="w-full md:w-2/6"
     />
     <app-creation-step-tab
       [text]="'Lesson Content Generation'"
       [icon]="'images/lesson-generation-icon.svg'"
       [active]="false"
-      class="w-2/6"
+      class="hidden md:block w-2/6"
     />
     <app-creation-step-tab
       [text]="'Practice Question Generation'"
       [icon]="'images/question-generation-icon.svg'"
       [active]="false"
-      class="w-2/6"
+      class="hidden md:block w-2/6"
     />
   </div>
   <h1 class="text-2xl font-medium">Create a new subject</h1>
-  <form #form="ngForm" class="flex flex-col w-6/12 my-4">
+  <form #form="ngForm" class="flex flex-col w-full md:w-6/12 my-4">
     <label for="">Subject Name</label>
     <input 
       type="text" 
