--- a/src/app/pages/subject-create/topic-preferences/topic-preferences.html
+++ b/src/app/pages/subject-create/topic-preferences/topic-preferences.html
@@ -1,24 +1,23 @@
 <app-header></app-header>
-<div class="flex flex-col w-full px-32">
-  <!-- Creation Tab Header -->
-  <div class="flex flex-row mb-8">
+<div class="flex flex-col w-full px-12 md:px-32">
+  <div class="flex flex-row mb-8 w-full">
     <app-creation-step-tab
       [text]="'My Subject and Materials'"
       [icon]="'images/subject-icon.svg'"
       [active]="true"
-      class="w-2/6"
+      class="hidden md:block w-2/6"
     />
     <app-creation-step-tab
       [text]="'Lesson Content Generation'"
       [icon]="'images/lesson-generation-icon.svg'"
       [active]="true"
-      class="w-2/6"
+      class="w-full md:w-2/6"
     />
     <app-creation-step-tab
       [text]="'Practice Question Generation'"
       [icon]="'images/question-generation-icon.svg'"
       [active]="false"
-      class="w-2/6"
+      class="hidden md:block w-2/6"
     />
   </div>
 
@@ -46,7 +45,7 @@
 
   <!-- Learning Preferences Form -->
   <h1 class="text-2xl font-medium">Learning Style</h1>
-  <form #form="ngForm" class="flex flex-col w-2/4">
+  <form #form="ngForm" class="flex flex-col w-full md:w-2/4">
     <label class="text-gray-700 my-2">How would you like this lesson to be?</label>
     <textarea
       type="text" 
