--- a/src/app/pages/dashboard/subjects/subjects.html
+++ b/src/app/pages/dashboard/subjects/subjects.html
@@ -14,6 +14,7 @@
       <button 
         class="w-full md:w-max rounded-md m-4 md:m-8 px-5 py-3 text-white bg-prussian-blue-800 hover:bg-prussian-blue-500 disabled:bg-prussian-blue-500 flex flex-row justify-center" 
         (click)="createNewSubject()"
+        [disabled]="loadingCreate"
       >
         Create New Subject
         <img src="images/create-subject-icon.svg" alt="" class="w-4 ml-2">
