--- a/src/app/pages/lesson/subtopic/subtopic.html
+++ b/src/app/pages/lesson/subtopic/subtopic.html
@@ -29,5 +29,5 @@
   </h1>
 
   <!-- Subtopic Content -->
-  <div class="text-lg text-gray-700 pb-16" [innerHTML]="currentView().content.content | markdown"></div>
+  <div class="prose text-lg text-gray-700 pb-16" [innerHTML]="currentView().content.content | markdown"></div>
 </div>
