--- a/src/app/pages/lesson/chatbot/chatbot.html
+++ b/src/app/pages/lesson/chatbot/chatbot.html
@@ -8,7 +8,7 @@
   <div #chatContainer class="flex flex-col w-full flex-grow overflow-y-auto scrollbar-thin scrollbar-thumb-gray-400 hover:scrollbar-thumb-gray-500">
     @for (chat of chatHistory(); track $index) {
       <div 
-        [class]="`rounded-xl p-2 my-1 break-words text-sm ${(chat.sender === 'user') ? 'self-end bg-prussian-blue-800 text-white' : 'self-start bg-prussian-blue-200 text-prussian-blue-900'}`"
+        [class]="`rounded-xl p-2 my-1 break-words text-sm ${(chat.sender === 'user') ? 'self-end bg-prussian-blue-800 text-white' : 'prose self-start bg-prussian-blue-200 text-prussian-blue-900'}`"
         style="max-width: 80%;"
       >
       <span [innerHTML]="chat.message | markdown"></span>
