improved content cycle display and email converts to lower case

--- a/src/app/pages/lesson/lesson-page/lesson-page.html
+++ b/src/app/pages/lesson/lesson-page/lesson-page.html
@@ -48,6 +48,7 @@
         class="w-full mr-6 ml-12"
         [currentView]="currentView" 
         [currentTopic]="getTopicDataFromSubtopic()" 
+        [getPosition]="getSubtopicPosition()"
         (cycleSubtopic)="changeSubtopic($event)" 
       ></app-subtopic>
     }
