--- a/src/app/pages/lesson/practice/practice.html
+++ b/src/app/pages/lesson/practice/practice.html
@@ -52,11 +52,19 @@
   
   <!-- Question Navigation -->
   <div class="flex flex-row">
-    <button class="flex flex-row items-center mx-4 text-prussian-blue-900 hover:text-prussian-blue-500" (click)="cycleQuestion('prev')">
+    <button 
+      [class]="`flex flex-row items-center mx-4 text-prussian-blue-900 hover:text-prussian-blue-500 disabled:text-prussian-blue-500 ${currentIndex === 0 ? 'invisible' : ''}`" 
+      (click)="cycleQuestion('prev')"
+      [disabled]="currentIndex === 0"
+    >
       <img src="images/dropdown-icon-closed.svg" alt="" class="w-2 m-4 rotate-180">
       Previous
     </button>
-    <button class="flex flex-row items-center mx-4 text-prussian-blue-900 hover:text-prussian-blue-500" (click)="cycleQuestion('next')">
+    <button 
+      [class]="`flex flex-row items-center mx-4 text-prussian-blue-900 hover:text-prussian-blue-500 disabled:text-prussian-blue-500 ${currentIndex === (currentView().content.questions.length - 1) ? 'invisible' : ''}`" 
+      (click)="cycleQuestion('next')"
+      [disabled]="currentIndex === (currentView().content.questions.length - 1)"
+    >
       Next
       <img src="images/dropdown-icon-closed.svg" alt="" class="w-2 m-4">
     </button>
