--- a/src/app/pages/home/pricing/pricing.html
+++ b/src/app/pages/home/pricing/pricing.html
@@ -15,7 +15,8 @@
     <div class="self-center md:self-end flex h-full md:flex-1 w-5/6 flex-col items-start rounded-[32px] border border-[#BFBFBF] bg-white p-6 sm:p-8 text-center shadow-lg md:mt-24">
       <h3 class="text-xl sm:text-2xl font-semibold text-[#264653]">Basic</h3>
       <div class="mt-2 text-3xl sm:text-4xl font-bold text-[#264653]">
-        <span>₦</span>0<span class="text-xs sm:text-sm font-normal text-gray-500">/per month</span>
+        <!-- <span>₦</span>0<span class="text-xs sm:text-sm font-normal text-gray-500">/per month</span> -->
+        <span>$</span>0<span class="text-xs sm:text-sm font-normal text-gray-500">/per month</span>
       </div>
       <button class="mt-6 w-full rounded-full bg-[#002D4B] px-6 sm:px-8 py-3 sm:py-4 text-base sm:text-lg font-semibold text-white transition hover:bg-gray-800">
         Get started for free
@@ -50,7 +51,8 @@
       </div>
       <h3 class="mt-4 text-xl sm:text-2xl font-semibold">Standard</h3>
       <div class="mt-2 text-3xl sm:text-4xl font-bold">
-        <span>₦</span>6000<span class="text-xs sm:text-sm font-normal text-gray-400">/per month</span>
+        <!-- <span>₦</span>6000<span class="text-xs sm:text-sm font-normal text-gray-400">/per month</span> -->
+        <span>$</span>5<span class="text-xs sm:text-sm font-normal text-gray-400">/per month</span>
       </div>
       <button class="mt-6 w-full rounded-full bg-white px-6 sm:px-8 py-3 sm:py-4 text-base sm:text-lg font-semibold text-[#262626] transition hover:bg-gray-200">
         Get Started
@@ -82,7 +84,8 @@
     <div class="self-center md:self-start flex h-full md:flex-1 w-5/6 flex-col items-start rounded-[36px] border border-[#BFBFBF] bg-white p-6 sm:p-8 text-center shadow-lg md:mt-24">
       <h3 class="text-xl sm:text-2xl font-semibold text-[#264653]">Premium</h3>
       <div class="mt-2 text-3xl sm:text-4xl font-bold text-[#264653]">
-        <span>₦</span>15,000<span class="text-xs sm:text-sm font-normal text-gray-500">/per month</span>
+        <!-- <span>₦</span>15,000<span class="text-xs sm:text-sm font-normal text-gray-500">/per month</span> -->
+        <span>$</span>12<span class="text-xs sm:text-sm font-normal text-gray-500">/per month</span>
       </div>
       <button class="mt-6 w-full rounded-full bg-[#002D4B] px-6 sm:px-8 py-3 sm:py-4 text-base sm:text-lg font-semibold text-white transition hover:bg-gray-800">
         Go Premium
