--- a/src/app/pages/lesson/chatbot/chatbot.html
+++ b/src/app/pages/lesson/chatbot/chatbot.html
@@ -29,7 +29,7 @@
 
     <!-- Submit Button -->
     <button 
-      class="self-center w-2/4 text-white rounded-md p-2 bg-prussian-blue-800 hover:bg-prussian-blue-500 disabled:bg-prussian-blue-500" 
+      class="self-center w-2/4 text-white rounded-md p-2 bg-prussian-blue-800 lg:hover:bg-prussian-blue-500 disabled:bg-prussian-blue-500" 
       (click)="sendMessage()"
       [disabled]="loading || !currentMessage"
     >
