--- a/src/app/pages/auth/check-email/check-email.html
+++ b/src/app/pages/auth/check-email/check-email.html
@@ -1,17 +1,20 @@
 <div class="flex flex-row w-screen h-screen justify-between">
   <!-- left panel -->
   <div class="w-full lg:w-6/12 h-full flex flex-col p-12">
+
+    <!-- Header -->
     <div class="flex flex-row my-8 items-center">
       <img src="images/logo-coloured.svg" alt="Maestro Logo" class="w-12 mr-2">
       <span class="font-serif text-3xl h-max text-prussian-blue-900">Maestro</span>
     </div>
+
     <div class="flex flex-col h-3/4 justify-between">
       <div>
         <h1 class="text-2xl font-bold my-4">Verify Email</h1>
         <p>A verification mail has been sent to <span class="font-bold">{{email}}</span></p>
       </div>
       <button 
-        class="text-left font-bold text-prussian-blue-900 disabled:text-prussian-blue-500 hover:text-prussian-blue-500"
+        class="text-left font-bold text-prussian-blue-900 disabled:text-prussian-blue-500 lg:hover:text-prussian-blue-500"
         [disabled]="(resendTimer > 0) || (loading)"
         (click)="resendVerificationEmail()"
       >
