--- a/src/app/pages/auth/signup/signup.html
+++ b/src/app/pages/auth/signup/signup.html
@@ -1,6 +1,8 @@
 <div class="flex flex-row w-screen h-screen justify-between">
   <!-- left panel -->
   <div class="w-full lg:w-6/12 h-full flex flex-col p-12">
+
+    <!-- Header -->
     <div class="flex flex-row my-8 items-center">
       <img src="images/logo-coloured.svg" alt="Maestro Logo" class="w-12 mr-2">
       <span class="font-serif text-3xl h-max text-prussian-blue-900">Maestro</span>
@@ -101,11 +103,12 @@
 
       <button 
         type="submit" 
-        class="w-full rounded-md p-4 text-white font-bold bg-prussian-blue-900 hover:bg-prussian-blue-500 disabled:bg-prussian-blue-500" 
+        class="w-full rounded-md p-4 text-white font-bold bg-prussian-blue-900 lg:hover:bg-prussian-blue-500 disabled:bg-prussian-blue-500 relative" 
         (click)="onSubmit()"
         [disabled]="loading"
       >
         Next
+        <img src="images/spinner.gif" alt="" [class]="`absolute right-2 top-3 w-8 h-8 mx-2  ${loading ? '' : 'hidden'}`">
       </button>
     </form>
     <div class="self-center m-4 pb-4">
@@ -122,7 +125,7 @@
   </div>
 </div>
 
-<div [class]="`absolute left-4 bottom-4 flex flex-row items-center ${loading ? '' : 'hidden'}`">
+<!-- <div [class]="`absolute left-4 top-8 flex flex-row items-center ${loading ? '' : 'hidden'}`">
   <img src="images/spinner.gif" alt="" class="w-8 h-8 mx-2">
   Signing Up...
-</div>
+</div> -->
