--- a/src/app/pages/auth/verify-email/verify-email.html
+++ b/src/app/pages/auth/verify-email/verify-email.html
@@ -1,16 +1,20 @@
 <div class="flex flex-row w-screen h-screen justify-between">
   <!-- left panel -->
   <div class="w-full lg:w-6/12 h-full flex flex-col p-12">
+
+    <!-- Header -->
     <div class="flex flex-row my-8 items-center">
       <img src="images/logo-coloured.svg" alt="Maestro Logo" class="w-12 mr-2">
       <span class="font-serif text-3xl h-max text-prussian-blue-900">Maestro</span>
     </div>
+
     @if (verified) {
       <div>
         Email verified successfully!<br>Now redirecting to login...
       </div>
     } @else {
-      <div>
+      <div class="flex flex-row items-center">
+        <img src="images/spinner.gif" alt="" class="w-8 h-8 mx-2">
         Please wait, verifying email...
       </div>
     }
