added epub and reset document size limit

--- a/src/app/pages/subject-create/naming-upload/naming-upload.html
+++ b/src/app/pages/subject-create/naming-upload/naming-upload.html
@@ -64,8 +64,10 @@
         class="hidden"
         multiple
       />
-      <p class="text-gray-600 text-sm text-center">Upload your PDF, PPTX, and DOCX files here to start generating personalized lessons for this subject.</p>
-      <p class="text-gray-400 text-xs my-2 text-center">PDF, PPT, PPTX, DOC, DOCX. Max file size: 20MB. Max total files size: 50MB. Maximum of 15 files.</p>
+      <p class="text-gray-600 text-sm text-center">Upload your files here to start generating personalized lessons for this subject.</p>
+      <p class="text-gray-400 text-xs my-2 text-center">
+        {{allowedExtensions.join(", ").toUpperCase()}}. Max file size: 20MB. Max total files size: 50MB. Maximum of 15 files.
+      </p>
     </div>
 
     <!-- Show selected files -->
