--- a/src/app/pages/lesson/lesson-page/lesson-page.html
+++ b/src/app/pages/lesson/lesson-page/lesson-page.html
@@ -42,7 +42,7 @@
     (updateView)="updatecurrentView($event)" 
   ></app-sidebar>
 
-  <div [class]="`flex overflow-y-auto scrollbar-thin scrollbar-thumb-gray-400 hover:scrollbar-thumb-gray-500 ${chatOpen ? 'w-6/12' : 'w-9/12'}`">
+  <div #contentContainer [class]="`flex overflow-y-auto scrollbar-thin scrollbar-thumb-gray-400 hover:scrollbar-thumb-gray-500 ${chatOpen ? 'w-6/12' : 'w-9/12'}`">
     @if (currentView.type === 'subtopic') {
       <app-subtopic 
         class="w-full mr-6 ml-12"
