--- a/src/app/pages/lesson/subtopic/subtopic.html
+++ b/src/app/pages/lesson/subtopic/subtopic.html
@@ -1,6 +1,6 @@
 <div class="w-full flex flex-col">
   <!-- Top Section -->
-  <div class="flex flex-row justify-between my-4">
+  <div class="flex flex-row justify-between py-4 sticky top-0 bg-white">
     <!-- Topic tree display -->
     <div class="flex flex-row items-center text-prussian-blue-800">
       {{ currentTopic().title }}
