--- a/src/app/pages/lesson/practice/practice.html
+++ b/src/app/pages/lesson/practice/practice.html
@@ -50,7 +50,7 @@
     }
   </div>
   
-  <!-- Question Navigation -->
+  <!-- Question Cycling -->
   <div class="flex flex-row">
     <button 
       [class]="`flex flex-row items-center mx-4 text-prussian-blue-900 hover:text-prussian-blue-500 disabled:text-prussian-blue-500 ${currentIndex === 0 ? 'invisible' : ''}`" 
@@ -68,6 +68,22 @@
       Next
       <img src="images/dropdown-icon-closed.svg" alt="" class="w-2 m-4">
     </button>
+  </div>
+
+  <!-- Question Navigation -->
+  <div class="flex flex-row flex-wrap w-full p-4">
+    @for (question of currentView().content.questions; track $index) {
+      <button 
+        [class]="`w-8 h-8 m-1 rounded-md lg:hover:bg-prussian-blue-500
+        ${(currentIndex === $index) ? 'bg-prussian-blue-800 text-white' : 
+          ((question.scored == null) ? 'bg-gray-300 text-gray-600' :
+            (question.scored ? 'bg-green-600 text-white lg:hover:bg-green-400' : 'bg-red-600 text-white lg:hover:bg-red-400'))}`"
+        (click)="goToQuestion($index)"
+        [disabled]="loading"
+      >
+        {{$index + 1}}
+      </button>
+    }
   </div>
 
   <!-- Submission Button -->
